Update specs and controller to support subscription events
